Tue Jul 21 22:02:24 UTC 2009  Adam Mitz  <mitza@ociweb.com>

        * DDS_release_notes.txt:
        * README:

          Preparing for forthcoming 1.3 release and documenting the change
          below:

        * dds/DCPS/Service_Participant.cpp:
        * dds/DCPS/transport/framework/TransportSendStrategy.cpp:

          Thread priorities are no longer set on Win32 systems.

Fri Jul 17 21:46:45 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Service_Participant.h:
        * dds/DCPS/Service_Participant.cpp:

          Updated scheduler quantum to make use of ACE_Time_Value::zero rather
          than a literal; this was confusing some platforms.

Fri Jul 17 17:26:48 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * java/jms/native/build.xml:

          Simplified creating Debug/Release builds on Windows platforms.

Thu Jul 16 21:03:27 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Adjusted protection in remove_all_associations; fixes failing
          JMS tests.

Thu Jul 16 19:42:46 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          scheduler_slice is now conditionally supported for ACE 5.5+
          platforms.

Thu Jul 16 19:32:28 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * bin/dcps_tests.lst:

          Dropped aggressive Thrasher tests from scoreboard.

Thu Jul 16 18:59:22 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Removed uneccessary read lock on writers_map_

Wed Jul 15 23:07:22 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Changed scheduler scope to ACE_SCOPE_THREAD; this should fix
          the ENOTSUP issue on platforms which use pthread_setschedparam.

Wed Jul 15 22:48:37 UTC 2009  Steven Stallion  <stallions@ociweb.com>

        * tests/DCPS/Priority/run_test.pl: